tests/baselines/reference/collisionThisExpressionAndModuleInGlobal.errors.txt
tests/cases/compiler/collisionThisExpressionAndModuleInGlobal.ts(1,8): error TS2399: Duplicate identifier '_this'. Compiler uses variable declaration '_this' to capture 'this' reference.


==== tests/cases/compiler/collisionThisExpressionAndModuleInGlobal.ts (1 errors) ====
    module _this { //Error
           ~~~~~
!!! error TS2399: Duplicate identifier '_this'. Compiler uses variable declaration '_this' to capture 'this' reference.
        class c {
        }
    }
    var f = () => this;